<resources>
    <string name="app_name">Check My Fluids</string>
    <string name="app_version">Version 1.0</string>

    <string name="action_settings">Settings</string>

    <!-- Main Activity -->

        <!-- Main Menu Button Strings-->
        <string name="main_menu_logo_description">Check My Fluids main menu logo</string>
        <string name="button_arrow_description">Arrow icon for buttons</string>

        <string name="log_fluids_icon_description">Log fluids icon</string>
        <string name="button_log_fluids">Log Fluids</string>
        <string name="button_log_fluids_description">Add oil and coolant entries</string>
        <string name="statistics_icon_description">Statistics icon</string>
        <string name="button_statistics">Statistics</string>
        <string name="button_statistics_description">View oil and coolant statistics</string>
        <string name="settings_icon_description">Settings icon</string>
        <string name="button_settings">Settings</string>
        <string name="button_settings_description">Adjust notification settings</string>

    <!-- Log Activity -->

        <!-- fragment_log_fluids Layout -->
        <string name="log_list_header_date">Date Filled</string>
        <string name="log_list_header_amount">Mileage</string>
        <string name="log_list_header_mileage">Amount Filled</string>

        <!-- add_edit_log Layout -->
        <string name="header_date">Date filled:  </string>
        <string name="header_date_hint">mm/dd/yyyy</string>
        <string name="header_mileage">Mileage:  </string>
        <string name="header_mileage_hint">100000</string>
        <string name="header_amount">Quarts filled:  </string>
        <string name="header_amount_hint">0.00</string>

        <!-- delete_log Layout -->
        <string name="dialog_message_delete_log">Are you sure you want to delete the selected log?</string>

        <!-- list_item_log Layout -->
        <string name="list_item_log_quarts">Quarts</string>

        <!-- log_coolant_tab Layout -->
        <string name="no_coolant_logs_entered">No coolant logs have been entered</string>
        <string name="logs_tab_add_button">Add</string>
        <string name="logs_tab_add_button_icon_description">Add log button icon</string>
        <string name="logs_tab_edit_button">Edit</string>
        <string name="logs_tab_edit_button_icon_description">Edit log button icon</string>
        <string name="logs_tab_delete_button">Delete</string>
        <string name="logs_tab_delete_button_icon_description">Delete log button icon</string>

        <!-- log_oil_tab Layout -->
        <string name="no_oil_logs_entered">No oil logs have been entered</string>


    <!-- Statistics Activity -->

        <!-- stats_coolant_tab Layout -->
        <string name="total_coolant_lost_header">Total Coolant Lost</string>
        <string name="total_lost_subheader">Quarts</string>
        <string name="coolant_amount_header">Coolant Logs</string>
        <string name="projected_coolant_header">Projected Future Coolant Usage</string>
        <string name="projected_days_subheader">Days</string>
        <string name="projected_miles_subheader">Miles</string>
        <string name="average_quarts_header">Average Quarts</string>
        <string name="average_quarts_subheader">Lost Per Month</string>
        <string name="average_miles_header">Average Miles</string>
        <string name="average_miles_subheader">Driven Per Day</string>
        <string name="one_quarter">1/4 Quart</string>
        <string name="one_half">1/2 Quart</string>
        <string name="three_quarter">3/4 Quart</string>
        <string name="one_quart">1 Quart</string>

        <string name="not_enough_coolant_logs">Not enough coolant logs to calculate data</string>
        <string name="not_enough_data">Not enough data</string>


        <!-- stats_oil_tab Layout -->
        <string name="total_oil_lost_header">Total Oil Lost</string>
        <string name="oil_amount_header">Oil Logs</string>
        <string name="projected_oil_header">Projected Future Oil Usage</string>

        <string name="not_enough_oil_logs">Not enough oil logs to calculate data</string>


    <!-- Settings Activity -->

        <!-- frequency_picker Layout-->
        <string name="dialog_frequency_picker_days">Days</string>

        <!-- pref_general strings -->

            <!-- settings category headings -->
            <string name="title_auto_notify_settings">Low Fluid Notifications Settings</string>
            <string name="title_set_notify_settings">Check Fluids Notification Settings</string>

            <!-- Notification checkbox title and descriptions -->
            <string name="pref_title_set_notify">Check fluids notification</string>
            <string name="pref_description_set_notify">Enable a notification to warn you when to check your fluid levels.</string>
            <string name="pref_title_oil_auto_notify">Low oil notifications</string>
            <string name="pref_description_oil_auto_notify">Enable a notification to warn you when you\'re low on oil.</string>
            <string name="pref_title_coolant_auto_notify">Low coolant notifications</string>
            <string name="pref_description_coolant_auto_notify">Enable a notification to warn you when you\'re low on coolant.</string>

            <!-- preference titles-->
            <string name="pref_title_set_time">Set time</string>
            <string name="pref_title_set_frequency">Set frequency</string>

            <!-- Set level amounts before auto notifying -->
            <string name="pref_title_oil_quart_amount">When to notify</string>
            <string name="pref_title_coolant_quart_amount">When to notify</string>

            <!-- Key name for fluid amount unit preference in SharedPreferences-->
            <string name="oil_quart_amount_key" translatable="false">oil_amount</string>
            <string name="coolant_quart_amount_key" translatable="false">coolant_amount</string>

            <!-- Label for one fourth option in quart amount unit preference -->
            <string name="pref_units_label_one_fourth">&#188; quart low</string>
            <!-- Label for one half option in quart amount unit preference -->
            <string name="pref_units_label_one_half">&#189; quart low</string>
            <!-- Label for three fourths option in quart amount unit preference -->
            <string name="pref_units_label_three_fourths">&#190; quart low</string>
            <!-- Label for one quart option in quart amount unit preference -->
            <string name="pref_units_label_one_quart">1 quart low</string>

            <!-- Value in SharedPreferences for one fourth unit option -->
            <string name="pref_units_one_fourth" translatable="false">.25</string>
            <!-- Value in SharedPreferences for one half unit option -->
            <string name="pref_units_one_half" translatable="false">.5</string>
            <!-- Value in SharedPreferences for three fourths unit option -->
            <string name="pref_units_three_fourths" translatable="false">.75</string>
            <!-- Value in SharedPreferences for one quart unit option -->
            <string name="pref_units_one_quart" translatable="false">1</string>


    <!-- Manifest -->

        <!-- To be displayed on the top settings bar -->
        <string name="title_activity_main_menu">Check My Fluids</string>
        <string name="title_activity_log_fluids">Log Fluids</string>
        <string name="title_activity_statistics">Statistics</string>
        <string name="title_activity_settings">Settings</string>





    <!-- Notification strings -->

        <!-- Set check fluid level reminders -->
        <string name="title_set_check_oil">Set check oil level reminder</string>
        <string name="pref_description_set_check_oil">Configure and set up a reminder on when you should check your oil levels.</string>
        <string name="title_set_check_coolant">Set check coolant level reminder</string>
        <string name="pref_description_set_check_coolant">Configure and set up a reminder on when you should check your coolant levels.</string>

</resources>
