<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/ColorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_menu_logo_description"
            android:src="@drawable/main_menu_logo"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/app_version"
        android:textColor="@color/TextSecondary"
        android:textSize="16dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <LinearLayout
            android:id="@+id/button_log_fluids"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:clickable="true"
            android:background="@color/WindowBackground" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/log_fluids_icon_description"
                    android:gravity="center"
                    android:src="@drawable/ic_log_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_log_fluids"
                    android:textStyle="bold"
                    android:textColor="@color/TextPrimary"
                    android:textSize="@dimen/font_size_main_menu_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_log_fluids_description"
                    android:textColor="@color/TextSecondary"
                    android:textSize="@dimen/font_size_main_menu_button_sub"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_arrow_description"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:src="@drawable/ic_arrow"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_statistics"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:clickable="true"
            android:background="@color/WindowBackground" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/statistics_icon_description"
                    android:src="@drawable/ic_statistics_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_statistics"
                    android:textStyle="bold"
                    android:textColor="@color/TextPrimary"
                    android:textSize="@dimen/font_size_main_menu_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_statistics_description"
                    android:textColor="@color/TextSecondary"
                    android:textSize="@dimen/font_size_main_menu_button_sub"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_arrow_description"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:src="@drawable/ic_arrow" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/button_settings"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:clickable="true"
            android:background="@color/WindowBackground" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/settings_icon_description"
                    android:src="@drawable/ic_settings_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_settings"
                    android:textStyle="bold"
                    android:textColor="@color/TextPrimary"
                    android:textSize="@dimen/font_size_main_menu_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_settings_description"
                    android:textColor="@color/TextSecondary"
                    android:textSize="@dimen/font_size_main_menu_button_sub"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_arrow_description"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:src="@drawable/ic_arrow" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
