<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:textAppearance="?android:textAppearanceSearchResultTitle"
        android:background="@color/ColorPrimary"
        android:textColor="@color/IconsAndTextHeaders"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/header_date"
            android:textColor="@color/TextPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText android:id="@+id/edittext_add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/TextSecondary"
                android:gravity="center"

                android:hint="@string/header_date_hint"
                android:maxLength="10"/>

            <ImageButton
                android:id="@+id/button_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                android:src="@drawable/ic_today"
                android:background="@color/ColorPrimary"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_mileage"
            android:textColor="@color/TextPrimary"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText android:id="@+id/edittext_add_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/TextSecondary"
            android:gravity="center"
            android:hint="@string/header_mileage_hint"
            android:maxLength="7"
            android:inputType="number">
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_amount"
            android:textColor="@color/TextPrimary"
            android:textAppearance="?android:textAppearanceMedium"/>

        <EditText
            android:id="@+id/edittext_add_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/TextSecondary"
            android:gravity="center"
            android:hint="@string/header_amount_hint"
            android:maxLength="4"
            android:inputType="numberDecimal"/>

    </LinearLayout>


</LinearLayout>