<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.minnloft.checkmyfluids.LogFluidsActivityFragment"
    android:orientation="vertical">

    <com.minnloft.checkmyfluids.tabs.SlidingTabLayout
        android:id="@+id/log_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:background="@color/LogsHeaderBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_list_header_date"
            android:textSize="@dimen/font_size_log_fluids_header"
            android:textColor="@color/LogsHeaderTextColor"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_list_header_mileage"
            android:textSize="@dimen/font_size_log_fluids_header"
            android:textColor="@color/LogsHeaderTextColor"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/log_list_header_amount"
            android:textSize="@dimen/font_size_log_fluids_header"
            android:textColor="@color/LogsHeaderTextColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider">
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/log_pager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"/>

</LinearLayout>
